k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: webapp-1-srv
                port:
                  number: 80
          - path: /webapp1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: webapp-1-srv
                port:
                  number: 80
          - path: /webapp2(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: webapp-2-srv
                port:
                  number: 80
